--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="/public/assets/favicon.ico" type="image/gif">
     <link rel="icon" href="/public/assets/favicon.ico" type="image/gif">
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'/>
-    <link href="https://fonts.googleapis.com/css?family=Exo+2:300,400,500,600,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cairo:400,700|Exo+2:400" rel="stylesheet">
     <link rel="stylesheet" href="/public/styles/style.css">
 </head>
 <body>
